<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.architecture.view.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lefticon="@drawable/btn_back"
        app:lefttext="@string/activity_back"
        app:title="@string/title_scan"/>

    <RelativeLayout
        android:id="@+id/rl_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dd_dimen_30px"
        android:paddingBottom="@dimen/dd_dimen_30px"
        android:background="@color/bg_code"
        android:gravity="center_vertical"
        android:layout_below="@id/titlebar"
        >
        <TextView
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_color_two"
            android:text="编号"
            android:layout_marginLeft="@dimen/dd_dimen_40px"
            android:textSize="@dimen/dd_dimen_26px"/>

        <TextView
            android:id="@+id/tv_node_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_color_two"
            android:text="节点名称"
            android:layout_marginRight="@dimen/dd_dimen_40px"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/dd_dimen_26px"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginLeft="@dimen/dd_dimen_60px"
            android:layout_toRightOf="@id/tv_code"
            android:gravity="right"/>
    </RelativeLayout>
    
    <View
        android:id="@+id/v_line_code"
        android:layout_width="match_parent"
        style="@style/line_hor1"
        android:layout_below="@id/rl_code"/>
    
    <LinearLayout
        android:id="@+id/ll_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_main"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/tv_construction"
            style="@style/tab_txt"
            android:drawableTop="@drawable/icon_construction_video"
            android:text="@string/construction_video"/>

        <TextView
            android:id="@+id/tv_bim"
            style="@style/tab_txt"
            android:drawableTop="@drawable/icon_bim"
            android:text="@string/bim"/>

        <TextView
            android:id="@+id/tv_repository"
            style="@style/tab_txt"
            android:drawableTop="@drawable/icon_repository"
            android:text="@string/repository"/>

        <TextView
            android:id="@+id/tv_architecture"
            style="@style/tab_txt"
            android:drawableTop="@drawable/icon_architecture"
            android:text="@string/architecture"/>

        <TextView
            android:id="@+id/tv_equipment"
            style="@style/tab_txt"
            android:drawableTop="@drawable/icon_equipment"
            android:text="@string/equipment"/>
    </LinearLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/v_line_code"
        android:layout_above="@id/ll_tab"
        android:background="@color/bg_code">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_code"
            android:paddingBottom="@dimen/dd_dimen_30px">
            <RelativeLayout
                android:id="@+id/rl_cad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="@dimen/dd_dimen_40px">
                <TextView
                    android:id="@+id/tv_pro_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font_color_three"
                    android:text="工程项目名称"
                    android:layout_marginLeft="@dimen/dd_dimen_40px"
                    android:layout_marginTop="@dimen/dd_dimen_40px"
                    android:textSize="@dimen/dd_dimen_26px"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:layout_toLeftOf="@+id/btn_cad"
                    android:layout_alignParentLeft="true"/>

                <Button
                    android:id="@+id/btn_cad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_cad"
                    android:paddingLeft="@dimen/dd_dimen_10px"
                    android:paddingRight="@dimen/dd_dimen_10px"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/dd_dimen_30px"
                    android:layout_marginRight="@dimen/dd_dimen_40px"/>

                <com.architecture.widget.imageview.MResizeThumbImageView
                    android:id="@+id/img_cad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dd_dimen_30px"
                    android:layout_marginRight="@dimen/dd_dimen_30px"
                    android:layout_marginTop="@dimen/dd_dimen_30px"
                    android:layout_below="@+id/tv_pro_name"/>
            </RelativeLayout>

            <View
                android:id="@+id/v_line_cad"
                android:layout_width="match_parent"
                style="@style/line_hor1"
                android:layout_below="@id/rl_cad"/>

            <TextView
                android:id="@+id/tv_image_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_color_two"
                android:text="@string/image_text"
                android:layout_marginLeft="@dimen/dd_dimen_40px"
                android:layout_marginTop="@dimen/dd_dimen_30px"
                android:textSize="@dimen/dd_dimen_24px"
                android:layout_below="@+id/v_line_cad"/>
            
            <RelativeLayout
                android:id="@+id/rl_image_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_intro_info"
                android:layout_below="@id/tv_image_text"
                android:layout_marginLeft="@dimen/dd_dimen_30px"
                android:layout_marginRight="@dimen/dd_dimen_30px"
                android:layout_marginTop="@dimen/dd_dimen_10px"
                android:padding="@dimen/dd_dimen_20px">
                <com.architecture.widget.CheckOverSizeTextView
                    android:id="@+id/tv_image_text_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dd_dimen_22px"
                    android:textColor="@color/font_color_three"
                    android:text="乐山大佛塑料袋福建省的福建省拉的福建省两地分居洒落的开发就撒旦浪费见识到了"/>
                
                <LinearLayout
                    android:id="@+id/ll_stretch_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_below="@+id/tv_image_text_content"
                    android:layout_alignParentRight="true">
                    <TextView
                        android:id="@+id/tv_more_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/font_color_two"
                        android:text="@string/btn_display_more"
                        android:textSize="@dimen/dd_dimen_22px"/>
                    
                    <ImageView
                        android:id="@+id/img_arrow_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_qrcode_down"
                        android:layout_marginLeft="@dimen/dd_dimen_6px"/>
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_attentions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_color_two"
                android:text="@string/attentions"
                android:layout_marginLeft="@dimen/dd_dimen_40px"
                android:layout_marginTop="@dimen/dd_dimen_30px"
                android:textSize="@dimen/dd_dimen_24px"
                android:layout_below="@+id/rl_image_text"/>

            <RelativeLayout
                android:id="@+id/rl_attentions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_intro_info"
                android:layout_below="@id/tv_attentions"
                android:layout_marginLeft="@dimen/dd_dimen_30px"
                android:layout_marginRight="@dimen/dd_dimen_30px"
                android:layout_marginTop="@dimen/dd_dimen_10px"
                android:padding="@dimen/dd_dimen_20px">
                <com.architecture.widget.CheckOverSizeTextView
                    android:id="@+id/tv_attentions_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dd_dimen_22px"
                    android:textColor="@color/font_color_three"/>

                <LinearLayout
                    android:id="@+id/ll_stretch_attentions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_below="@+id/tv_attentions_content"
                    android:layout_alignParentRight="true">
                    <TextView
                        android:id="@+id/tv_more_attentions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/font_color_two"
                        android:text="@string/btn_display_more"
                        android:textSize="@dimen/dd_dimen_22px"/>

                    <ImageView
                        android:id="@+id/img_more_attentions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_qrcode_down"
                        android:layout_marginLeft="@dimen/dd_dimen_6px"/>
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_construction_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_color_two"
                android:text="@string/construction_points"
                android:layout_marginLeft="@dimen/dd_dimen_40px"
                android:layout_marginTop="@dimen/dd_dimen_30px"
                android:textSize="@dimen/dd_dimen_24px"
                android:layout_below="@+id/rl_attentions"/>

            <RelativeLayout
                android:id="@+id/rl_construction_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_intro_info"
                android:layout_below="@id/tv_construction_points"
                android:layout_marginLeft="@dimen/dd_dimen_30px"
                android:layout_marginRight="@dimen/dd_dimen_30px"
                android:layout_marginTop="@dimen/dd_dimen_10px"
                android:padding="@dimen/dd_dimen_20px">
                <com.architecture.widget.CheckOverSizeTextView
                    android:id="@+id/tv_construction_points_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dd_dimen_22px"
                    android:textColor="@color/font_color_three"
                    android:text="施工要点乐山大佛塑料袋福建省的福建省拉的福建省两地分居洒落的开发就撒旦浪费见识到了"/>

                <LinearLayout
                    android:id="@+id/ll_stretch_construction_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_below="@+id/tv_construction_points_content"
                    android:layout_alignParentRight="true">
                    <TextView
                        android:id="@+id/tv_more_construction_points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/font_color_two"
                        android:text="@string/btn_display_more"
                        android:textSize="@dimen/dd_dimen_22px"/>

                    <ImageView
                        android:id="@+id/img_construction_points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_qrcode_down"
                        android:layout_marginLeft="@dimen/dd_dimen_6px"/>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>